# shellinford-python

./: .coveragerc  .travis.yml  CHANGES.rst  MANIFEST.in  README.rst  setup.py  shellinford.i  shellinford.py  shellinford_wrap.cxx  test_shellinford.py
cpp_src/: shellinford_fm_index.cc  shellinford_fm_index.h
shellinford/: README  __init__.py  configure  configure.ac  shellinford.py
shellinford/perl/Shellinford/: Changes  MANIFEST  Makefile.PL  README
shellinford/perl/Shellinford/lib/: Shellinford.pm
shellinford/perl/Shellinford/t/: Shellinford.t
shellinford/sample/: Makefile.am  bwt.cc  make_wavelet_tree.cc  rank_bit_vector.cc  select_wavelet_tree.cc
shellinford/src/: Makefile.am  shellinford_bit_vector.cc  shellinford_fm_index.h  shellinford_succinct_vector.h  shellinford_wavelet_matrix.h
shellinford/test/: test_wavelet_tree.cc
shellinford/var/: test.txt
shellinford_cpp/: Makefile.am  Makefile.in  README2  config.h.in
shellinford_cpp/perl/Shellinford/: Shellinford.xs  search_fm_index.pl  typemap
shellinford_cpp/sample/: Makefile.in  make_bit_vector.cc  make_fm_index.cc  rank_wavelet_tree.cc  rbwt.cc  search_fm_index.cc  select_bit_vector.cc
shellinford_cpp/src/: Makefile.in  shellinford_bit_vector.h  shellinford_fm_index.cc  shellinford_wavelet_tree.h
shellinford_cpp/test/: Makefile.am  Makefile.in  test_bit_vector.cc  test_fm_index.cc  test_main.cc  test_wavelet_matrix.cc
