AM_CXXFLAGS = -Wall -g -O2 -I../src

noinst_PROGRAMS = \
  make_bit_vector \
  rank_bit_vector \
  select_bit_vector \
  make_wavelet_tree \
  rank_wavelet_tree \
  select_wavelet_tree \
  make_fm_index \
  search_fm_index

make_bit_vector_SOURCES   = make_bit_vector.cc
make_bit_vector_LDADD     = ../src/libshellinford.la
rank_bit_vector_SOURCES   = rank_bit_vector.cc
rank_bit_vector_LDADD     = ../src/libshellinford.la
select_bit_vector_SOURCES = select_bit_vector.cc
select_bit_vector_LDADD   = ../src/libshellinford.la

make_wavelet_tree_SOURCES   = make_wavelet_tree.cc
make_wavelet_tree_LDADD     = ../src/libshellinford.la
rank_wavelet_tree_SOURCES   = rank_wavelet_tree.cc
rank_wavelet_tree_LDADD     = ../src/libshellinford.la
select_wavelet_tree_SOURCES = select_wavelet_tree.cc
select_wavelet_tree_LDADD   = ../src/libshellinford.la

make_fm_index_SOURCES   = make_fm_index.cc
make_fm_index_LDADD     = ../src/libshellinford.la
search_fm_index_SOURCES = search_fm_index.cc
search_fm_index_LDADD   = ../src/libshellinford.la


