AM_CXXFLAGS = -Wall -g -O2

lib_LTLIBRARIES = libshellinford.la

libshellinford_la_SOURCES = \
  shellinford_bit_vector.cc \
  shellinford_fm_index.cc

include_HEADERS = \
  shellinford_bit_vector.h \
  shellinford_succinct_vector.h \
  shellinford_wavelet_tree.h \
  shellinford_wavelet_matrix.h \
  shellinford_fm_index.h

